@@ -5,7 +5,7 @@ package AtomicParsley::Command::Tags;
 
 # ABSTRACT: represent the mp4 metatags
 
-use String::Util 'hascontent';
+use Params::Util qw{_STRING};
 
 use Object::Tiny qw{
   artist
@@ -48,11 +48,7 @@ sub prepare {
     # loop through all accessors and generate parameters for AP
     my @out;
     while ( my ( $key, $value ) = each(%$self) ) {
-        next
-          unless defined $value
-              && ref($value) ne 'HASH'
-              && ref($value) ne 'ARRAY'
-              && hascontent($value);
+        next unless _STRING($value);
 
         push @out, "--$key";
         push @out, $value;
